# swagger/BackScreen.yaml
@@ -186,6 +186,62 @@ paths:
                 QTD:
                   type: integer
 
+  /orgaos/financeiro:
+    get:
+      operationId: model.orgaos.financeiro
+      parameters:
+        - name: cdorg
+          description: Código do órgão.
+          in: query
+          type: integer
+          required: true
+      tags:
+      - Órgãos
+      summary: Total dos vistas abertas no órgão
+      description: Exibe a contagem de vistas abertas do órgão selecionado, agrupadas por tempo de abertura
+      responses:
+        200:
+          description: Operação de contagem das vistas feita com sucesso
+          schema:
+            type: array
+            items:
+              properties:
+                CUSTO_ORGAO:
+                  type: integer
+                AREA_ORGAO:
+                  type: integer
+                NATUREZA:
+                  type: string
+
+  /orgaos/financeiro/agrupado:
+    get:
+      operationId: model.orgaos.financeiro_agrupado
+      parameters:
+        - name: cdorg
+          description: Código do órgão.
+          in: query
+          type: integer
+          required: true
+      tags:
+      - Órgãos
+      summary: Total dos vistas abertas no órgão
+      description: Exibe a contagem de vistas abertas do órgão selecionado, agrupadas por tempo de abertura
+      responses:
+        200:
+          description: Operação de contagem das vistas feita com sucesso
+          schema:
+            type: array
+            items:
+              properties:
+                CONCESSIONARIAS:
+                  type: integer
+                IMOVEIS:
+                  type: integer
+                PESSOAL:
+                  type: integer
+                TERCEIRIZADOS:
+                  type: integer
+
   /clima:
     get:
       operationId: model.clima.read
@@ -229,57 +285,17 @@ paths:
                   type: array
                   items:
                     type: integer
-  /orgaos/financeiro:
-    get:
-      operationId: model.orgaos.financeiro
-      parameters:
-        - name: cdorg
-          description: Código do órgão.
-          in: query
-          type: integer
-          required: true
+
+  /login:
+    post:
+      operationId: model.login.login
+      parameters
+        - name: username
+          description: Nome do usuário
+        - name: password
+          description: Senha do usuário
+          
       tags:
-      - Órgãos
-      summary: Total dos vistas abertas no órgão
-      description: Exibe a contagem de vistas abertas do órgão selecionado, agrupadas por tempo de abertura
-      responses:
-        200:
-          description: Operação de contagem das vistas feita com sucesso
-          schema:
-            type: array
-            items:
-              properties:
-                CUSTO_ORGAO:
-                  type: integer
-                AREA_ORGAO:
-                  type: integer
-                NATUREZA:
-                  type: string
-  /orgaos/financeiro/agrupado:
-    get:
-      operationId: model.orgaos.financeiro_agrupado
-      parameters:
-        - name: cdorg
-          description: Código do órgão.
-          in: query
-          type: integer
-          required: true
-      tags:
-      - Órgãos
-      summary: Total dos vistas abertas no órgão
-      description: Exibe a contagem de vistas abertas do órgão selecionado, agrupadas por tempo de abertura
-      responses:
-        200:
-          description: Operação de contagem das vistas feita com sucesso
-          schema:
-            type: array
-            items:
-              properties:
-                CONCESSIONARIAS:
-                  type: integer
-                IMOVEIS:
-                  type: integer
-                PESSOAL:
-                  type: integer
-                TERCEIRIZADOS:
-                  type: integer
+        -Authentication
+      summary: Autenticação de usuário
+      description: Sistema de geração de Token para login
